--- a/front-movies/src/index.css
+++ b/front-movies/src/index.css
@@ -22,6 +22,7 @@ html {
 
 body {
   margin: 0;
+  height: 100%;
 }
 
 /**
@@ -355,3 +356,5 @@ template {
   justify-content: center;
   margin: 2% 0%;
 }
+
+
