--- a/front-movies/src/components/forms/forms.css
+++ b/front-movies/src/components/forms/forms.css
@@ -1,7 +1,18 @@
 .form-box {
   margin: 0 auto;
   padding: 30px;
+}
+
+.login {
   max-width: 400px;
+}
+
+.register {
+  max-width: 800px;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .border {
@@ -9,11 +20,19 @@
   border-radius: 5px;
 }
 
-.form-sign {
+.form-login-sign {
   font-size: 24px;
   font-weight: 300;
   letter-spacing: -0.3px;
-  margin: 0px 65px 20px;
+}
+
+.form-sign-register {
+  font-size: 42px;
+}
+
+.register-join {
+  font-size: 14px;
+  letter-spacing: -0.3px;
 }
 
 .btn-login {
