--- a/front-movies/src/components/forms/forms.css
+++ b/front-movies/src/components/forms/forms.css
@@ -1,7 +1,7 @@
 .form-box {
   margin: 0 auto;
   padding: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .new {
@@ -14,6 +14,7 @@
 
 .login {
   max-width: 400px;
+  margin-top: 40px;
 }
 
 .register {
